--- a/data/communities.yml
+++ b/data/communities.yml
@@ -5,6 +5,13 @@
   events: https://www.meetup.com/agile-finland-helsinki-coaching-circle/
   site: https://www.agile.fi/
   logo: agile-finland.png
+- name: Symposium AI
+  location: Helsinki, Finland
+  tags:
+    - AI
+    - Machine Learning
+  events: https://lu.ma/symposiumai
+  logo: symposium-ai.png
 - name: archipylago
   location: Turku, Finland
   tags:
@@ -103,7 +110,8 @@
     - Architecture
     - Leaderhsip
   events: https://bit.ly/helsinkictos
-  json: https://gist.githubusercontent.com/olegp/ffd01ced03cf6632378655e161711754/raw
+  json: >-
+    https://gist.githubusercontent.com/olegp/ffd01ced03cf6632378655e161711754/raw
   logo: helsinki-ctos.jpg
 - name: Helsinki Data Analytics & Science Meetup
   location: Helsinki, Finland
@@ -134,7 +142,8 @@
   tags:
     - Hacker News
   events: https://bit.ly/helsinkihn
-  json: https://gist.githubusercontent.com/olegp/f34469b65286c057964414c4aaf5bf47/raw
+  json: >-
+    https://gist.githubusercontent.com/olegp/f34469b65286c057964414c4aaf5bf47/raw
   logo: helsinki-hn.png
 - name: Helsinki Java User Group
   location: Helsinki, Finland
