--- a/data/communities.yml
+++ b/data/communities.yml
@@ -148,6 +148,14 @@
   url: >-
     https://gist.githubusercontent.com/olegp/f34469b65286c057964414c4aaf5bf47/raw
   logo: helsinki-hn.png
+- name: Helsinki Java Coffee
+  location: Helsinki, Finland
+  tags:
+    - Java
+  events: https://gist.github.com/ctapobep/c60f8ff47022053647faf8fa6dbebdb9?permalink_comment_id=5768142#gistcomment-5768142
+  url: >-
+    https://gist.githubusercontent.com/ctapobep/c60f8ff47022053647faf8fa6dbebdb9/raw
+  logo: helsinki-java-user-group.png
 - name: Helsinki Java User Group
   location: Helsinki, Finland
   tags:
