fix: correct luma URL references in data and code

--- a/data/communities.yml
+++ b/data/communities.yml
@@ -231,7 +231,7 @@
   location: Helsinki, Finland
   tags:
     - Game Development
-  events: https://lu.ma/calendar/cal-43KtcM8sGYhTKGf
+  events: https://luma.com/calendar/cal-43KtcM8sGYhTKGf
   logo: igda-finland.png
 - name: Microsoft Security User Group Finland
   location: Helsinki, Finland
@@ -271,7 +271,7 @@
   tags:
     - AI
     - Machine Learning
-  events: https://lu.ma/symposiumai
+  events: https://luma.com/symposiumai
   logo: symposium-ai.png
 - name: TampereJS
   location: Tampere, Finland
