--- a/site/_config.yml
+++ b/site/_config.yml
@@ -3,3 +3,4 @@ description: >-
   A directory of active tech communities & meetups in Finland. Discover new communities in your city and search for ones abroad by topic.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.techtrib.es"
+timezone: Europe/Helsinki
