--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "purgecss": "purgecss --css site/assets/css/tabler.css --content site/**/*.html --output site/assets/css/tabler.css",
     "scrape": "node src/scrape.ts",
     "sort": "node src/sort.ts",
-    "images": "node src/images.ts"
+    "images": "node src/images.ts",
+    "add": "node src/add.ts"
   },
   "author": "Oleg Podsechin",
   "license": "MIT",
