--- a/data/communities.yml
+++ b/data/communities.yml
@@ -261,6 +261,12 @@
     - AI
   events: https://www.meetup.com/pydatahelsinki/
   logo: pydata.png
+- name: PyLadies Tampere
+  location: Tampere, Finland
+  tags:
+    - Python
+  events: https://luma.com/user/pyladiestampere
+  logo: pyladies-tampere.png
 - name: React Helsinki
   location: Helsinki, Finland
   tags:
