--- a/data/communities.yml
+++ b/data/communities.yml
@@ -336,3 +336,11 @@
     - WordPress
   events: https://www.meetup.com/WPHelsinki/
   logo: wordpress-helsinki.png
+- name: Kubernetes and Cloud Native Computing Foundation Finland
+  location: Helsinki, Finland
+  tags:
+    - DevOps
+    - Cloud Computing
+    - Kubernetes
+  events: https://www.meetup.com/kubernetes-finland/
+  logo: kubernetes-finland.png
