--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "jekyll serve --source site --livereload --host 0.0.0.0",
     "build": "jekyll build --source site",
     "css": "node src/css.ts",
-    "purgecss": "purgecss --css site/assets/css/tabler.css --content site/**/*.html --output site/assets/css/tabler.css",
+    "purgecss": "echo 'Note: PurgeCSS is not needed - Tailwind handles CSS purging automatically'",
     "scrape": "node src/scrape.ts",
     "sort": "node src/sort.ts",
     "images": "node src/images.ts",
@@ -20,13 +20,19 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "basecoat-css": "^0.3.6",
     "cheerio": "^1.0.0",
     "js-yaml": "^4.1.1"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.3.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1",
     "purgecss": "^7.0.2",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "tailwindcss": "^3.4.18"
   }
 }
