Add Helsinki Data Week Meetup community

--- a/data/communities.yml
+++ b/data/communities.yml
@@ -344,3 +344,11 @@
     - Kubernetes
   events: https://www.meetup.com/kubernetes-finland/
   logo: kubernetes-finland.png
+- name: Helsinki Data Week
+  location: Helsinki, Finland
+  tags:
+    - Data Science
+    - Data Engineering
+    - AI
+  events: https://www.meetup.com/helsinki-data-week/
+  logo: helsinki-data-week.png
